[package]
name = "distiller"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
aws-config = "0.56"
aws-sdk-sfn = "0.34"
aws-sdk-s3 = "0.34"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.17"
console = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
bytes = "1.8.0"
